<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NurseHelper</string>
    <string name="isLogin">isLogin = %b</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!--  Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- components -->


    <!--ui.login  -->
    <string name="continue_btn">계속</string>
    <string name="back_btn">돌아가기</string>
    <string name="id_label">ID</string>
    <string name="pw_label">PW</string>
    <string name="find_pw">비밀번호를 찾고싶나요?</string>
    <string name="new_user">처음이신가요?</string>
    <string name="insert_id">ID를 입력하세요</string>
    <string name="insert_pw">PW를 입력하세요</string>
    <string name="welcome_regist">환영합니다.</string>
    <string name="regist_state_title_almost">거의 다 왔습니다.</string>
    <string name="regist_state_sub_title_user_id">사용자 확인을 위해 ID를 설정해야 합니다.</string>
    <string name="regist_state_sub_title_user_pw">사용자 확인을 위해 PW를 설정해야 합니다.</string>
    <string name="regist_state_title_last">마지막입니다.</string>
    <string name="agree_terms">서비스 이용을 위해 약관 동의가 필요합니다.</string>
    <string name="essential">[필수]</string>
    <string name="agree_terms_checkbox_label_all">전체 약관동의</string>
    <string name="agree_terms_checkbox_label_essential">nersehelper 필수약관 동의</string>
    <string name="agree_terms_checkbox_label_essential_detail">이용약관

&lt; nuhlp &gt;(\'www.nuhlp.com\'이하 \'nurse helper\')은(는) 「개인정보 보호법」 제30조에 따라 정보주체의 개인정보를 보호하고 이와 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보 처리방침을 수립·공개합니다.
○ 이 개인정보처리방침은 2022년 5월 1부터 적용됩니다.

제1조(개인정보의 처리 목적)

&lt; nuhlp &gt;(\'www.nuhlp.com\'이하 \'nurse helper\')은(는) 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며 이용 목적이 변경되는 경우에는 「개인정보 보호법」 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.
1. 홈페이지 회원가입 및 관리
회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 서비스 부정이용 방지 목적으로 개인정보를 처리합니다.


</string>
    <string name="agree_terms_checkbox_label_userinfo">개인정보 수집 및 이용 동의</string>
    <string name="tool_text_state_title">STATE_TITLE</string>
    <string name="tool_text_state_sub_title">state_sub_title</string>
    <string name="check_user_id_btn">중복확인</string>
    <string name="text_edit_disable_id">이미 있는 사용자 ID입니다</string>
    <string name="edit_text_hint_verify">확인이 완료되었습니다</string>
    <string name="edit_text_hint_retry_anather_id">다른 ID를 입력해주세요</string>
    <string name="user_create_btn">새 계정 생성</string>
    <string name="wrongUser">\"아이디 혹은 비밀번호가 잘못되었습니다.\"</string>
    <string name="search">검색</string>
    <string name="content_description_search">검색설명</string>
    <string name="more">더보기</string>
    <string name="content_description_more">더보기 설명</string>
    <string name="appbar_btn">바텀앱바버튼</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="info_label_tag_nursing_home">요양원</string>
    <string name="info_label_tag_name">이름</string>
    <string name="info_label_tag_gender">성별</string>
    <string name="info_label_tag_age">나이</string>
    <string name="info_label_tag_rrn">생년월일</string>

    <string name="CONSENT_TO_HOME_CARE">가정간호 동의서</string>
    <string name="CONSENT_TO_COLLECT_AND_USE_PERSONAL_INFORMATION">개인정보 수집 및 이용 동의서</string>
    <string name="HOME_CARE_REQUEST_FORM">가정간호 의뢰지</string>
    <string name="HOME_NURSING_PATIENT_SELECTION">가정간호 대상자 선정/분류 기준지</string>
    <string name="HOME_CARE_TERMINATION_SUMMARY_FORM">가정간호 종결 요약지</string>
    <string name="HOME_NURSING_PROGRESS_REPORT">가정간호 경과 기록지</string>
    <string name="save">저장</string>
    <string name="menu_description_logout">계정 로그아웃</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_data_setting">DB 초기설정</string>
    <string name="menu_description_data_setting">테스트 더미데이터 주입</string>

</resources>