<?xml version="1.0" encoding="utf-8"?>


<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:padding="@dimen/view_label_padding"
    tools:layout_width="400dp"
    tools:layout_height="@dimen/view_label_Height"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <TextView
        android:id="@+id/place_info_label_tag"
        android:layout_width="@dimen/info_label_tag_width"
        android:layout_height="wrap_content"
        style="@style/placeInfoLabelTagBase"
        android:text="@string/info_label_tag_nursing_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/place_info_label_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/placeInfoLabelTextBase"
        tools:text="행복요양병원"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/place_info_label_tag"
        app:layout_constraintTop_toTopOf="@+id/place_info_label_tag" />

    <TextView
        android:id="@+id/name_info_label_tag"
        android:layout_width="@dimen/info_label_tag_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_label_tag_name"
        style="@style/placeInfoLabelTagBase"
        app:layout_constraintStart_toStartOf="@+id/place_info_label_tag"
        app:layout_constraintTop_toBottomOf="@+id/place_info_label_tag" />

    <TextView
        android:id="@+id/name_info_label_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="홍길동"
        style="@style/placeInfoLabelTextBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/name_info_label_tag"
        app:layout_constraintTop_toTopOf="@+id/name_info_label_tag" />

    <TextView
        android:id="@+id/gender_info_label_tag"
        android:layout_width="@dimen/info_label_tag_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_label_tag_gender"
        style="@style/placeInfoLabelTagBase"
        app:layout_constraintStart_toStartOf="@+id/name_info_label_tag"
        app:layout_constraintTop_toBottomOf="@+id/name_info_label_tag" />

    <TextView
        android:id="@+id/gender_info_label_text"
        style="@style/placeInfoLabelTextBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender_info_label_tag"
        app:layout_constraintTop_toTopOf="@+id/gender_info_label_tag"
        tools:text="남" />

    <TextView
        android:id="@+id/age_info_label_tag"
        android:layout_width="@dimen/info_label_tag_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_label_tag_age"
        style="@style/placeInfoLabelTagBase"
        app:layout_constraintStart_toStartOf="@+id/gender_info_label_tag"
        app:layout_constraintTop_toBottomOf="@+id/gender_info_label_tag" />

    <TextView
        android:id="@+id/age_label_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/placeInfoLabelTextBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/age_info_label_tag"
        app:layout_constraintTop_toTopOf="@+id/age_info_label_tag"
        tools:text="99" />

    <TextView
        android:id="@+id/rrn_info_label"
        android:layout_width="@dimen/info_label_tag_width"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/info_label_tag_rrn"
        style="@style/placeInfoLabelTagBase"
        app:layout_constraintStart_toStartOf="@+id/age_info_label_tag"
        app:layout_constraintTop_toBottomOf="@+id/age_info_label_tag" />

    <TextView
        android:id="@+id/rrn_label_text"
        style="@style/placeInfoLabelTextBase"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rrn_info_label"
        app:layout_constraintTop_toTopOf="@+id/rrn_info_label"
        tools:text="1901년 01월 01일" />


</merge>