<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.RegisterPwFragment"
    android:background="@color/primaryColorBack">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="150dp"
        android:background="@color/white"
        android:elevation="3dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            android:padding="@dimen/side_margin">

            // 로고 부분
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/regist_section_logo"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="@dimen/logo_image_width"
                    android:layout_height="@dimen/logo_image_height"

                    android:layout_gravity="top|left"
                    android:layout_marginTop="@dimen/margin_between_elements"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_banner_foreground" />
            </LinearLayout>

            // 상태 부분
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/regist_section_state"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/state_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginX_element_login_container"
                    android:layout_marginEnd="@dimen/marginX_element_login_container"
                    android:layout_marginBottom="@dimen/margin_between_elements"
                    tools:text="@string/tool_text_state_title"
                    android:textSize="@dimen/welcome_regist_size" />
                <TextView
                    android:id="@+id/state_sub_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginX_element_login_container"
                    android:layout_marginTop="@dimen/margin_between_group"
                    android:layout_marginEnd="@dimen/marginX_element_login_container"
                    android:gravity="center"
                    tools:text="@string/tool_text_state_sub_title"
                    android:textSize="@dimen/agree_terms_size" />
                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/regist_progressbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marginX_element_login_container"
                    android:layout_marginTop="@dimen/margin_between_elements_x2"
                    android:layout_marginEnd="@dimen/marginX_element_login_container"
                    android:indeterminate="false"
                    android:max="100"
                    app:trackThickness="@dimen/progress_bar_thickness" />
            </LinearLayout>

            // 컨텐츠 부분
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/regist_section_contents"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_between_group_medium">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginHorizontal="@dimen/regist_contents_margin_x"
                    android:hint="@string/pw_label"
                    app:helperText="@string/insert_pw">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_edit_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#616161"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_layout_pw_check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginHorizontal="@dimen/regist_contents_margin_x"
                    android:hint="PW"
                    app:helperText="한번더 입력하세요">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_Edit_pw_check"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#616161"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            // 버튼 부분
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue_login"
                    style="@style/registContainerElements"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/btn_height"
                    android:text="@string/user_create_btn"
                    android:textColor="@color/black"
                    android:textSize="@dimen/btn_size"
                    app:elevation="@dimen/btn_elevation"
                    android:enabled="false"/>
            </LinearLayout>

        </LinearLayout>



    </ScrollView>

</FrameLayout>